<resources>
    <string name="app_name">SimbirSoftTasks</string>
    <string name="add_new_task">Add new task</string>
    <string name="add_title">Add title</string>
    <string name="add_description">Add description</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="save">Save</string>
    <string name="choose_color">Choose color</string>
    <string name="pick_time">Pick time</string>
    <string name="pick_date">Pick date</string>
    <string name="input_error">Field is empty</string>
    <string name="delete_task_title">Delete task %s?</string>
    <string name="delete_task_dialog_description">It cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="task_description">Task description</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
</resources>