<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.TaskDetailsFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_delete"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:icon="@drawable/ic_delete"
        app:iconSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/color_circle"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/color_circle"
        android:backgroundTint="@color/md_theme_dark_secondary"
        app:layout_constraintBottom_toBottomOf="@id/tv_details_task_name"
        app:layout_constraintEnd_toStartOf="@id/tv_details_task_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_details_task_name" />

    <TextView
        android:id="@+id/tv_details_task_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/button_delete"
        app:layout_constraintEnd_toStartOf="@id/button_delete"
        app:layout_constraintStart_toEndOf="@id/color_circle"
        app:layout_constraintTop_toTopOf="@id/button_delete"
        tools:text="Task name" />

    <TextView
        android:id="@+id/tv_details_task_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/task_description"
        android:textSize="14sp"
        android:textColor="?attr/hintTextViewColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_details_task_name" />

    <TextView
        android:id="@+id/tv_details_task_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="@+id/tv_details_task_description_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_details_task_description_label"
        tools:text="Task description" />

    <TextView
        android:id="@+id/tv_details_start_date_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/start_date"
        android:textSize="14sp"
        android:textColor="?attr/hintTextViewColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_details_task_description" />

    <TextView
        android:id="@+id/tv_details_start_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_details_start_date_time_label"
        app:layout_constraintTop_toBottomOf="@id/tv_details_start_date_time_label"
        tools:text="Tue, Jan 16, 2024 - 16:45" />

    <TextView
        android:id="@+id/tv_details_end_date_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/end_date"
        android:textSize="14sp"
        android:textColor="?attr/hintTextViewColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_details_start_date_time" />

    <TextView
        android:id="@+id/tv_details_end_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tv_details_end_date_time_label"
        app:layout_constraintTop_toBottomOf="@id/tv_details_end_date_time_label"
        tools:text="Tue, Jan 16, 2024 - 17:30" />

</androidx.constraintlayout.widget.ConstraintLayout>